    Remove them on uninstall. (thanks Didier and Lionel !)
  * etc/xdg/lubuntu/lxdm/lxdm.conf:
   - Fix location of the background.
  * usr/bin/startlubuntu* & usr/share/lubuntu/leafpad/
   - Install specific settings for leafpad, with Ubuntu font by default.
  * etc/xdg/lubuntu/pcmanfm:
   - Add specific settings for pcmanfm, with Ubuntu font by default.

 -- Julien Lavergne <gilir@ubuntu.com>  Tue, 16 Aug 2011 01:11:02 +0200

lubuntu-default-settings (0.20) oneiric; urgency=low

  [ Jonathan Marsden ]
  * etc/xdg/lubuntu/menus/lxde-applications.menu:
   - Avoid Audio, Video and AudioVideo applications appearing
     in the Accessories menu (duplicating Sound & Video entries).
   - Avoid applications in both System and Utility categories
     appearing in the Accessories menu (duplicating System Tools
     entries). (LP: #779818)

  [ Julien Lavergne ]
  * usr/share/lubuntu/openbox/rc.xml
   - Add Super_L, Super_R and ALt-F1 to keybindings for opening the menu. 
  * etc/xdg/lxsession/*/autostart:
   - Don't autostart nm-applet, should be autostarted automatically.
   - Use xfce4-power-manager instead of gnome-power-manager which depends now
     on gnome-settings-daemon.
  * etc/xdg/lubuntu/lxdm/lxdm.conf:
   - Update with version in lxdm 0.4.0. 

 -- Julien Lavergne <gilir@ubuntu.com>  Thu, 28 Jul 2011 23:42:29 +0200

lubuntu-default-settings (0.19) natty; urgency=low

  * etc/xdg/lubuntu/applications/default.list:
    - Set Chromium as the default handler for http/https
    - Use libreoffice instead of ooo2
    - Set apturl as the default handler for apturl

 -- Julien Lavergne <gilir@ubuntu.com>  Mon, 25 Apr 2011 21:11:38 +0200

lubuntu-default-settings (0.18) natty; urgency=low

  * etc/xdg/lubuntu/menus/lxde-applications.menu:
   - Set name of the menu to Applications, to fix libfm-pref-apps.

 -- Julien Lavergne <gilir@ubuntu.com>  Thu, 17 Mar 2011 18:59:59 +0100

lubuntu-default-settings (0.17) natty; urgency=low

  [ Julien Lavergne ]