@@ -9,6 +9,8 @@ lubuntu-default-settings (0.21) UNRELEASED; urgency=low
    - Install specific settings for leafpad, with Ubuntu font by default.
   * etc/xdg/lubuntu/pcmanfm:
    - Add specific settings for pcmanfm, with Ubuntu font by default.
+  * usr/share/lubuntu/openbox/rc.xml:
+   - Use Ubuntu font by default instead of sans.
 
  -- Julien Lavergne <gilir@ubuntu.com>  Tue, 16 Aug 2011 01:11:02 +0200
 
